<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtvPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/command"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop"
        android:id="@+id/btnStop"
        android:layout_below="@+id/btnFoward"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forward"
        android:id="@+id/btnFoward"
        android:layout_below="@+id/txtvPrompt"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/left"
        android:id="@+id/btnLeft"
        android:layout_alignTop="@+id/btnStop"
        android:layout_toLeftOf="@+id/btnStop"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/right"
        android:id="@+id/btnRight"
        android:layout_alignTop="@+id/btnStop"
        android:layout_toRightOf="@+id/btnStop"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:id="@+id/btnBack"
        android:layout_below="@+id/btnStop"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
