<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:screenOrientation="landscape">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/execution_queue"
        android:id="@+id/tvTitleNormalQueue"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonQueue0"
        android:src="@drawable/checkbox"
        android:layout_below="@+id/tvTitleNormalQueue"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="@dimen/queue_drop_space_margin"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:adjustViewBounds="true"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgView0"
        android:src="@drawable/viewrightarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imgButtonQueue1"
        android:layout_toRightOf="@+id/imgButtonQueue0"
        android:layout_toEndOf="@+id/imgButtonQueue0" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonQueue1"
        android:src="@drawable/checkbox"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imgButtonQueue0"
        android:layout_toRightOf="@+id/imgView0"
        android:layout_toEndOf="@+id/imgView0" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/viewrightarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imgButtonQueue1"
        android:layout_toRightOf="@+id/imgButtonQueue1"
        android:layout_toEndOf="@+id/imgButtonQueue1" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonQueue2"
        android:src="@drawable/checkbox"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imageView"
        android:layout_toRightOf="@+id/imageView"
        android:layout_toEndOf="@+id/imageView" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:src="@drawable/viewrightarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imgButtonQueue2"
        android:layout_toRightOf="@+id/imgButtonQueue2"
        android:layout_toEndOf="@+id/imgButtonQueue2" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonQueue3"
        android:src="@drawable/checkbox"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imageView3"
        android:layout_toRightOf="@+id/imageView3"
        android:layout_toEndOf="@+id/imageView3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView5"
        android:src="@drawable/viewleftarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imgButtonQueue3"
        android:layout_toRightOf="@+id/imgButtonQueue3"
        android:layout_toEndOf="@+id/imgButtonQueue3" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonQueue4"
        android:src="@drawable/checkbox"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imageView5"
        android:layout_toRightOf="@+id/imageView5"
        android:layout_toEndOf="@+id/imageView5" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonQueue5"
        android:src="@drawable/checkbox"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:adjustViewBounds="true"
        android:layout_below="@+id/imageView12"
        android:layout_alignLeft="@+id/imageView12"
        android:layout_alignStart="@+id/imageView12" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView8"
        android:src="@drawable/viewleftarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_below="@+id/imgButtonQueue4"
        android:layout_alignLeft="@+id/imgButtonQueue4"
        android:layout_alignStart="@+id/imgButtonQueue4" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView9"
        android:src="@drawable/viewleftarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_below="@+id/imgButtonQueue3"
        android:layout_alignLeft="@+id/imgButtonQueue3"
        android:layout_alignStart="@+id/imgButtonQueue3" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView10"
        android:src="@drawable/viewleftarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imageView9"
        android:layout_alignLeft="@+id/imgButtonQueue2"
        android:layout_alignStart="@+id/imgButtonQueue2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView11"
        android:src="@drawable/viewleftarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imageView10"
        android:layout_alignLeft="@+id/imgButtonQueue1"
        android:layout_alignStart="@+id/imgButtonQueue1" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView12"
        android:src="@drawable/viewdownarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imageView11"
        android:layout_alignLeft="@+id/imgButtonQueue0"
        android:layout_alignStart="@+id/imgButtonQueue0" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView13"
        android:src="@drawable/viewdownarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignBottom="@+id/imgButtonQueue4"
        android:layout_toRightOf="@+id/imgButtonQueue4"
        android:layout_toEndOf="@+id/imgButtonQueue4" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonQueue6"
        android:src="@drawable/checkbox"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:adjustViewBounds="true"
        android:layout_below="@+id/imageView11"
        android:layout_alignLeft="@+id/imageView11"
        android:layout_alignStart="@+id/imageView11" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonQueue7"
        android:src="@drawable/checkbox"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:adjustViewBounds="true"
        android:layout_below="@+id/imageView10"
        android:layout_alignLeft="@+id/imageView10"
        android:layout_alignStart="@+id/imageView10" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonQueue8"
        android:src="@drawable/checkbox"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:adjustViewBounds="true"
        android:layout_below="@+id/imageView9"
        android:layout_alignLeft="@+id/imageView9"
        android:layout_alignStart="@+id/imageView9" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonQueue9"
        android:src="@drawable/checkbox"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:adjustViewBounds="true"
        android:layout_below="@+id/imageView8"
        android:layout_alignLeft="@+id/imageView8"
        android:layout_alignStart="@+id/imageView8" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView18"
        android:src="@drawable/viewrightarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignBottom="@+id/imgButtonQueue6"
        android:layout_toLeftOf="@+id/imgButtonQueue6"
        android:layout_toStartOf="@+id/imgButtonQueue6" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView19"
        android:src="@drawable/viewrightarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignBottom="@+id/imgButtonQueue7"
        android:layout_toLeftOf="@+id/imgButtonQueue7"
        android:layout_toStartOf="@+id/imgButtonQueue7" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonQueue20"
        android:src="@drawable/viewrightarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignBottom="@+id/imgButtonQueue8"
        android:layout_toLeftOf="@+id/imgButtonQueue8"
        android:layout_toStartOf="@+id/imgButtonQueue8" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonQueue21"
        android:src="@drawable/viewrightarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignBottom="@+id/imgButtonQueue9"
        android:layout_toLeftOf="@+id/imgButtonQueue9"
        android:layout_toStartOf="@+id/imgButtonQueue9" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonFunction0"
        android:src="@drawable/checkbox"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:layout_marginLeft="@dimen/queue_drop_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:src="@drawable/viewrightarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imgButtonFunction0"
        android:layout_toRightOf="@+id/imgButtonFunction0"
        android:layout_toEndOf="@+id/imgButtonFunction0" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonFunction1"
        android:src="@drawable/checkbox"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:src="@drawable/viewrightarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imgButtonFunction1"
        android:layout_toRightOf="@+id/imgButtonFunction1"
        android:layout_toEndOf="@+id/imgButtonFunction1" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonFunction2"
        android:src="@drawable/checkbox"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView6"
        android:src="@drawable/viewrightarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imgButtonFunction2"
        android:layout_toRightOf="@+id/imgButtonFunction2"
        android:layout_toEndOf="@+id/imgButtonFunction2" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonFunction3"
        android:src="@drawable/checkbox"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imageView6"
        android:layout_toRightOf="@+id/imageView6"
        android:layout_toEndOf="@+id/imageView6" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView7"
        android:src="@drawable/viewrightarrow"
        android:maxHeight="@dimen/queue_space_margin"
        android:maxWidth="@dimen/queue_space_margin"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imgButtonFunction3"
        android:layout_toRightOf="@+id/imgButtonFunction3"
        android:layout_toEndOf="@+id/imgButtonFunction3" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgButtonFunction4"
        android:src="@drawable/checkbox"
        android:maxHeight="@dimen/drop_space_size"
        android:maxWidth="@dimen/drop_space_size"
        android:adjustViewBounds="true"
        android:layout_alignTop="@+id/imageView7"
        android:layout_toRightOf="@+id/imageView7"
        android:layout_toEndOf="@+id/imageView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/function_execution_queue"
        android:id="@+id/tvTitleFunctionQueue"
        android:layout_above="@+id/imgButtonFunction0"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imgBtnGo"
        android:src="@drawable/play"
        android:maxHeight="@dimen/draggable_size"
        android:maxWidth="@dimen/draggable_size"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/imageView13"
        android:layout_toEndOf="@+id/imageView13"
        android:layout_alignTop="@+id/imgButtonFunction4" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ConnectBluetooth"
        android:id="@+id/btnConnectBluetooth"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>